docs: :pencil: add param in api doc
