# docs/swagger.yaml
@@ -2,29 +2,51 @@ basePath: /api/v1
 host: 127.0.0.1:8080
 info:
   contact: {}
-  description: A Bulletin Board System backend using golang
-  license:
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  title: bbs-backend
+  description: |-
+    A Bulletin Board System backend base on golang
+    BBS 前後端溝通介面，每個 row 代表一個可使用的 API 實體
+  title: bbs-backend API Docs
   version: "1.0"
 paths:
   /comments:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: postId
+        in: formData
+        name: postId
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
         "500":
           description: Internal Server Error
-      summary: Get all comments
+      summary: Get all comments of the post
       tags:
       - comments
     post:
       consumes:
       - application/json
+      parameters:
+      - description: postId
+        in: formData
+        name: postId
+        required: true
+        type: integer
+      - description: authorId
+        in: formData
+        name: authorId
+        required: true
+        type: integer
+      - description: content
+        in: formData
+        name: content
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -39,11 +61,17 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
         "500":
           description: Internal Server Error
       summary: Delete the comment
@@ -52,6 +80,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -65,11 +99,22 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: content
+        in: formData
+        name: content
+        required: true
+        type: string
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
         "500":
           description: Internal Server Error
       summary: Update the comment
@@ -79,6 +124,22 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: formData
+        name: uid
+        required: true
+        type: integer
+      - description: targetUid
+        in: formData
+        name: targetUid
+        required: true
+        type: integer
+      - description: status
+        in: formData
+        name: status
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -93,6 +154,17 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: formData
+        name: uid
+        required: true
+        type: integer
+      - description: targetUid
+        in: formData
+        name: targetUid
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -106,6 +178,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -119,6 +197,22 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: formData
+        name: uid
+        required: true
+        type: integer
+      - description: targetUid
+        in: formData
+        name: targetUid
+        required: true
+        type: integer
+      - description: status
+        in: formData
+        name: status
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -133,6 +227,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: topic
+        in: formData
+        name: topic
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -140,12 +240,33 @@ paths:
           description: OK
         "500":
           description: Internal Server Error
-      summary: Get all posts
+      summary: Get all posts of the topic
       tags:
       - posts
     post:
       consumes:
       - application/json
+      parameters:
+      - description: topic
+        in: formData
+        name: topic
+        required: true
+        type: string
+      - description: authorId
+        in: formData
+        name: authorId
+        required: true
+        type: integer
+      - description: title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: content
+        in: formData
+        name: content
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -160,6 +281,12 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -173,6 +300,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -186,6 +319,20 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: title
+        in: formData
+        name: title
+        type: string
+      - description: content
+        in: formData
+        name: content
+        type: string
       produces:
       - application/json
       responses:
@@ -213,6 +360,17 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: description
+        in: formData
+        name: description
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -227,6 +385,12 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -240,6 +404,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -253,6 +423,20 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: name
+        in: formData
+        name: name
+        type: string
+      - description: description
+        in: formData
+        name: description
+        type: string
       produces:
       - application/json
       responses:
@@ -313,6 +497,12 @@ paths:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -326,6 +516,11 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        type: integer
       produces:
       - application/json
       responses:
@@ -340,6 +535,22 @@ paths:
     put:
       consumes:
       - application/json
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        required: true
+        type: integer
+      - description: nickname
+        in: formData
+        name: nickname
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
       produces:
       - application/json
       responses:
