# routers/api/v1/post.go
@@ -27,6 +27,10 @@ func (r *postRouter) Setup(rg *gin.RouterGroup) {
 // @Tags         posts
 // @Accept       json
 // @Produce      json
+// @Param topic formData string true "topic"
+// @Param authorId formData int true "authorId"
+// @Param title formData string true "title"
+// @Param content formData string true "content"
 // @Success      201  {object}  nil
 // @Failure      500  {object}  nil
 // @Router       /posts [post]
@@ -35,10 +39,11 @@ func (r *postRouter) CreatePost(c *gin.Context) {
 }
 
 // GetPosts 	 godoc
-// @Summary      Get all posts
+// @Summary      Get all posts of the topic
 // @Tags         posts
 // @Accept       json
 // @Produce      json
+// @Param topic formData string true "topic"
 // @Success      200  {object}  nil
 // @Failure      500  {object}  nil
 // @Router       /posts [get]
@@ -51,6 +56,9 @@ func (r *postRouter) GetPosts(c *gin.Context) {
 // @Tags         posts
 // @Accept       json
 // @Produce      json
+// @Param id path int true "id"
+// @Param title formData string false "title"
+// @Param content formData string false "content"
 // @Success      200  {object}  nil
 // @Failure      500  {object}  nil
 // @Router       /posts/:id [put]
@@ -63,6 +71,7 @@ func (r *postRouter) UpdatePost(c *gin.Context) {
 // @Tags         posts
 // @Accept       json
 // @Produce      json
+// @Param id path int true "id"
 // @Success      200  {object}  nil
 // @Failure      500  {object}  nil
 // @Router       /posts/:id [delete]
@@ -75,6 +84,7 @@ func (r *postRouter) DeletePost(c *gin.Context) {
 // @Tags         posts
 // @Accept       json
 // @Produce      json
+// @Param id path int true "id"
 // @Success      200  {object}  nil
 // @Failure      500  {object}  nil
 // @Router       /posts/:id [get]
